<?xml version="1.0"?>
<package format="2">
  <name>lotte_smart_cargo</name>
  <version>0.0.1</version>
  <description>lotte_smart_cargo</description>

  <maintainer email="joth@fieldro.tech">fieldro</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>